// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreList display properly is mobile 1`] = `
<div
  className="StoreList-storeList-0-1-1"
>
  <div
    className="StoreItem-storeItem-0-1-2 StoreItem-storeItemMobile-0-1-3"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl01"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText01
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2 StoreItem-storeItemMobile-0-1-3"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl02"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText02
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2 StoreItem-storeItemMobile-0-1-3"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl03"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText03
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2 StoreItem-storeItemMobile-0-1-3"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl04"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText04
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2 StoreItem-storeItemMobile-0-1-3"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl05"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText05
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2 StoreItem-storeItemMobile-0-1-3"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl06"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText06
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2 StoreItem-storeItemMobile-0-1-3"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl07"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText07
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2 StoreItem-storeItemMobile-0-1-3"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl08"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText08
    </span>
  </div>
  <div
    className="ShowMore-showMoreMobile-0-1-7"
  >
    <div
      className="ShowMore-textBoxMobile-0-1-9"
    >
      All Stores
    </div>
  </div>
</div>
`;

exports[`StoreList display properly is not mobile 1`] = `
<div
  className="StoreList-storeList-0-1-1"
>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl01"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText01
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl02"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText02
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl03"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText03
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl04"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText04
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl05"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText05
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl06"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText06
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl07"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText07
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl08"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText08
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl09"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText09
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl10"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText10
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl11"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText11
    </span>
  </div>
  <div
    className="StoreItem-storeItem-0-1-2"
    onClick={[Function]}
  >
    <img
      alt="icon"
      className="StoreItem-icon-0-1-4"
      src="logoUrl12"
    />
    <span
      className="StoreItem-name-0-1-5"
    >
      displayText12
    </span>
  </div>
  <div
    className="ShowMore-showMoreDesktop-0-1-6"
  >
    <div
      className="ShowMore-textBoxDesktop-0-1-8"
    >
      view all popular stores
    </div>
  </div>
</div>
`;
